# job-challenges

./: LICENSE  README.md
company_01/: README
company_01/01-inverter-string/: CMakeLists.txt  invert.cpp  invert.h  main.cpp  main_mock.cpp  run.sh
company_01/02-sudoku/: CMakeLists.txt  fixFormat.sh  main.cpp  main.cpp.old  run.sh  teste-01.json  teste-02.json  teste-03.json
company_01/03-split-string/: CMakeLists.txt  main.cpp  run.sh
company_01/04-stack/: CMakeLists.txt  main.cpp  run.sh
company_01/05-partition/: CMakeLists.txt  main.cpp  run.sh
company_01/06-common/: CMakeLists.txt  main.cpp  run.sh
